--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700);
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -25,11 +34,11 @@
   color: #ffffff;
 }
 #ext_menu-165 .mbr-navbar__items a {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 12px;
 }
 #ext_menu-165 .mbr-brand__name a {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 20px;
 }
 #ext_menu-165 .mbr-navbar__items a SPAN {
@@ -51,12 +60,13 @@
 }
 #header4-164 .btn {
   font-size: 36px;
+  font-family: 'Montserrat', sans-serif;
 }
 #content5-b .mbr-header .mbr-header__text {
   text-align: center;
   color: #7ac673;
   font-size: 46px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 #content5-b .mbr-header .mbr-header__subtext {
   text-align: center;
@@ -71,22 +81,29 @@
   color: #c1c1c1;
 }
 #content5-b .mbr-article P {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
+}
+#content5-b .btn {
+  font-family: 'Montserrat', sans-serif;
 }
 #slider-5 P {
   text-align: center;
   font-size: 18px;
+  font-family: 'Titillium Web', sans-serif;
 }
 #slider-5 H1 {
   color: #7ac673;
   font-size: 36px;
-  font-family: 'PT Sans Narrow', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+}
+#slider-5 .btn {
+  font-family: 'Montserrat', sans-serif;
 }
 #content5-166 .mbr-header .mbr-header__text {
   text-align: center;
   color: #fff;
   font-size: 46px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 #content5-166 .mbr-header .mbr-header__subtext {
   text-align: center;
@@ -100,11 +117,14 @@
 #content5-166 .mbr-article DIV {
   color: #c1c1c1;
 }
+#content5-166 .mbr-article P {
+  font-family: 'Titillium Web', sans-serif;
+}
 #content5-9 .mbr-header .mbr-header__text {
   text-align: center;
   color: #e25041;
   font-size: 46px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 #content5-9 .mbr-header .mbr-header__subtext {
   text-align: center;
@@ -118,10 +138,14 @@
 #content5-9 .mbr-article DIV {
   color: #c1c1c1;
 }
+#content5-9 .mbr-article P {
+  font-family: 'Titillium Web', sans-serif;
+}
 #content5-6 .mbr-header .mbr-header__text {
   text-align: center;
   color: #faaf40;
   font-size: 46px;
+  font-family: 'Montserrat', sans-serif;
 }
 #content5-6 .mbr-header .mbr-header__subtext {
   text-align: center;
@@ -133,36 +157,201 @@
 }
 #content5-6 .mbr-article P {
   text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 25px;
   color: #faaf40;
 }
 #content5-6 .btn {
   font-size: 12px;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 #content5-6 .mbr-header .mbr-header__subtext SPAN {
   font-size: 18px;
+  font-family: 'Titillium Web', sans-serif;
 }
 #social-buttons1-d .mbr-header__text {
   color: #434343;
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
 }
 #contacts3-7 STRONG {
   color: #ffffff;
 }
 #contacts3-7 .btn {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 12px;
 }
 #contacts3-7 P {
   text-align: right;
   font-size: 14px;
   color: #9c9c9c;
+  font-family: 'Titillium Web', sans-serif;
 }
 #contacts3-7 B {
   color: #ffffff;
 }
 #footer1-3 P {
   text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#ext_menu-g .mbr-brand__name {
+  font-size: 16px;
+}
+#ext_menu-g.mbr-navbar--stuck .mbr-navbar__section {
+  background: #000000;
+}
+#ext_menu-g .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#ext_menu-g .mbr-navbar__items a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+}
+#ext_menu-g .mbr-brand__name a {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 20px;
+}
+#ext_menu-g .mbr-navbar__items a SPAN {
+  font-size: 12px;
+}
+#header4-n H1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 46px;
+  text-align: center;
+  color: #0a8186;
+}
+#header4-n P {
+  color: #000000;
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 21px;
+}
+#header4-n .btn {
+  font-family: 'Montserrat', sans-serif;
+}
+#social-buttons1-q .mbr-header__text {
+  text-align: right;
+  font-size: 22px;
+  font-family: 'Titillium Web', sans-serif;
+}
+#header2-u P {
+  text-align: left;
+  color: #777777;
+  font-family: 'Titillium Web', sans-serif;
+}
+#header2-u H1 {
+  text-align: left;
+  color: #000000;
+  font-family: 'Montserrat', sans-serif;
+}
+#testimonials1-k .mbr-reviews__text P {
+  font-family: 'Titillium Web', sans-serif;
+  text-align: left;
+}
+#testimonials1-k .mbr-section__header {
+  font-family: 'Montserrat', sans-serif;
+}
+#testimonials1-k .mbr-reviews__author-name {
+  font-family: 'Montserrat', sans-serif;
+}
+#msg-box3-t .mbr-header .mbr-header__text {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+#msg-box3-t .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-t .mbr-article P {
+  font-family: 'Titillium Web', sans-serif;
+  text-align: left;
+}
+#msg-box3-l .mbr-header .mbr-header__text {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+#msg-box3-l .mbr-header .mbr-header__subtext {
+  text-align: center;
+}
+#msg-box3-l .mbr-article P {
+  font-family: 'Titillium Web', sans-serif;
+  text-align: center;
+}
+#pricing-table1-s H3 {
+  font-family: 'Montserrat', sans-serif;
+}
+#pricing-table1-s SPAN {
+  font-family: 'Montserrat', sans-serif;
+}
+#pricing-table1-s DIV {
+  font-family: 'Titillium Web', sans-serif;
+}
+#form1-m .btn {
+  font-family: 'Montserrat', sans-serif;
+}
+#form1-m .mbr-header__text {
+  font-family: 'Montserrat', sans-serif;
+}
+#footer1-i P {
+  text-align: center;
+}
+
+
+
+
+
+#ext_menu-v .mbr-brand__name {
+  font-size: 16px;
+}
+#ext_menu-v.mbr-navbar--stuck .mbr-navbar__section {
+  background: #000000;
+}
+#ext_menu-v .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#ext_menu-v .mbr-navbar__items a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+}
+#ext_menu-v .mbr-brand__name a {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 20px;
+}
+#ext_menu-v .mbr-navbar__items a SPAN {
+  font-size: 12px;
+}
+#footer1-14 P {
+  text-align: center;
+}
+#header4-16 H1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 46px;
+  text-align: center;
+  color: #0a8186;
+}
+#header4-16 P {
+  color: #000000;
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 21px;
+}
+#header4-16 .btn {
+  font-family: 'Montserrat', sans-serif;
 }
