--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -11,5 +11,8 @@
 .webgl-content .progress.Dark .empty {background-image: url('progressEmpty.Dark.png');}
 .webgl-content .progress.Dark .full {background-image: url('progressFull.Dark.png');}
 
-
-.webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 100%; height: 100%; margin: 0 auto}
+.webgl-content .footer {margin-top: 5px; height: 200px; line-height: 200px; font-family: Helvetica, Verdana, Arial, sans-serif; font-size: 18px;}
+.webgl-content .footer .webgl-logo, .title, .fullscreen {height: 100%; display: inline-block; background: transparent center no-repeat;}
+.webgl-content .footer .webgl-logo {background-image: url('webgl-logo.png'); width: 100%; height: 100%; margin: 0 auto}
+.webgl-content .footer .title {margin-right: 10px; float: right;}
+.webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 100px; height: 100px; margin: 0 auto}
