--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -15,4 +15,4 @@
 .webgl-content .footer .webgl-logo, .title, .fullscreen {height: 100%; display: inline-block; background: transparent center no-repeat;}
 .webgl-content .footer .webgl-logo {background-image: url('webgl-logo.png'); width: 100%; height: 100%; margin: 0 auto}
 .webgl-content .footer .title {margin-right: 10px; float: right;}
-.webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 200px; height: 200px; margin: 0 auto}
+.webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 100%; height: 100%; margin: 0 auto}
