--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -16,3 +16,5 @@
 .webgl-content .footer .webgl-logo {background-image: url('webgl-logo.png'); width: 100%; height: 100%; margin: 0 auto}
 .webgl-content .footer .title {margin-right: 10px; float: right;}
 .webgl-content .footer .fullscreen {background-image: url('fullscreen.png'); width: 100%; height: 100%; margin: 0 auto}
+
+background-color: #c50c0c;
