--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -752,8 +752,6 @@ a {
 .cid-srTDszp7RK {
   z-index: 1000;
   width: 100%;
-  position: relative;
-  min-height: 60px;
 }
 .cid-srTDszp7RK nav.navbar {
   position: fixed;
@@ -853,8 +851,7 @@ a {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: rgba(35, 35, 35, 0.2);
 }
 .cid-srTDszp7RK .navbar.opened {
   transition: all 0.3s;
