--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -691,38 +691,73 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-srToZo6nDe {
+.cid-srTHxB3c5i {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  background-color: #030303;
+}
+.cid-srTHxB3c5i .content-wrapper {
+  background: #030303;
+}
+@media (max-width: 991px) {
+  .cid-srTHxB3c5i .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-srTHxB3c5i .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-srTHxB3c5i .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-srTHxB3c5i .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-srTHxB3c5i .content-wrapper .text-wrapper {
+    padding-left: 2rem;
+  }
+}
+.cid-srTHxB3c5i .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-srTHclp0lD {
   padding-top: 10rem;
   padding-bottom: 10rem;
   background-image: url("../../../assets/images/mbr-1-1920x1280.jpg");
 }
-.cid-srToZo6nDe .mbr-overlay {
+.cid-srTHclp0lD .mbr-overlay {
   background: #fafafa;
   opacity: 0;
 }
-.cid-srToZo6nDe img,
-.cid-srToZo6nDe .item-img {
+.cid-srTHclp0lD img,
+.cid-srTHclp0lD .item-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.cid-srToZo6nDe .item:focus,
-.cid-srToZo6nDe span:focus {
+.cid-srTHclp0lD .item:focus,
+.cid-srTHclp0lD span:focus {
   outline: none;
 }
-.cid-srToZo6nDe .item {
+.cid-srTHclp0lD .item {
   cursor: pointer;
   margin-bottom: 2rem;
 }
-.cid-srToZo6nDe .row {
+.cid-srTHclp0lD .row {
   margin-left: 0;
   margin-right: 0;
 }
-.cid-srToZo6nDe .item {
+.cid-srTHclp0lD .item {
   padding: 0;
   margin: 0;
 }
-.cid-srToZo6nDe .item-wrapper {
+.cid-srTHclp0lD .item-wrapper {
   position: relative;
   border-radius: 4px;
   background: #353535;
@@ -731,385 +766,36 @@ a {
   flex-flow: column nowrap;
 }
 @media (min-width: 992px) {
-  .cid-srToZo6nDe .item-wrapper .item-content {
+  .cid-srTHclp0lD .item-wrapper .item-content {
     padding: 2rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-srToZo6nDe .item-wrapper .item-content {
+  .cid-srTHclp0lD .item-wrapper .item-content {
     padding: 1rem;
   }
 }
-.cid-srToZo6nDe .mbr-section-btn {
+.cid-srTHclp0lD .mbr-section-btn {
   margin-top: auto !important;
 }
-.cid-srToZo6nDe .mbr-section-title {
+.cid-srTHclp0lD .mbr-section-title {
   color: #232323;
 }
-.cid-srToZo6nDe .mbr-text,
-.cid-srToZo6nDe .mbr-section-btn {
+.cid-srTHclp0lD .mbr-text,
+.cid-srTHclp0lD .mbr-section-btn {
   text-align: left;
 }
-.cid-srToZo6nDe .item-title {
+.cid-srTHclp0lD .item-title {
   text-align: left;
 }
-.cid-srToZo6nDe .item-subtitle {
+.cid-srTHclp0lD .item-subtitle {
   text-align: left;
   color: #bbbbbb;
 }
-.cid-srTDszp7RK {
-  z-index: 1000;
-  width: 100%;
-}
-.cid-srTDszp7RK nav.navbar {
-  position: fixed;
-}
-.cid-srTDszp7RK .dropdown-item:before {
-  font-family: Moririse2 !important;
-  content: "\e966";
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
-  text-align: center;
-  overflow: hidden;
-  transform: scale(0, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-srTDszp7RK .dropdown-menu {
-  padding: 0;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-}
-.cid-srTDszp7RK .dropdown-item {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-srTDszp7RK .dropdown-item:hover,
-.cid-srTDszp7RK .dropdown-item:focus {
-  background: #6592e6 !important;
-  color: white !important;
-}
-.cid-srTDszp7RK .dropdown-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.cid-srTDszp7RK .dropdown-item:last-child {
-  border-bottom: none;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.cid-srTDszp7RK .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: 0.667em 1em !important;
-}
-.cid-srTDszp7RK .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-srTDszp7RK .nav-link {
-  position: relative;
-}
-.cid-srTDszp7RK .container {
-  display: flex;
-  margin: auto;
-}
-.cid-srTDszp7RK .iconfont-wrapper {
-  color: #000000 !important;
-  font-size: 1.5rem;
-  padding-right: 0.5rem;
-}
-.cid-srTDszp7RK .dropdown-menu,
-.cid-srTDszp7RK .navbar.opened {
-  background: #232323 !important;
-}
-.cid-srTDszp7RK .nav-item:focus,
-.cid-srTDszp7RK .nav-link:focus {
-  outline: none;
-}
-.cid-srTDszp7RK .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  transition: all 0.25s ease-in-out;
-}
-.cid-srTDszp7RK .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-srTDszp7RK .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-right: 0.5rem;
-  vertical-align: sub;
-}
-.cid-srTDszp7RK .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  transform: scale(1, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-srTDszp7RK .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-srTDszp7RK .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-srTDszp7RK .navbar {
-  min-height: 70px;
-  transition: all 0.3s;
-  border-bottom: 1px solid transparent;
-  background: rgba(35, 35, 35, 0.2);
-}
-.cid-srTDszp7RK .navbar.opened {
-  transition: all 0.3s;
-}
-.cid-srTDszp7RK .navbar .dropdown-item {
-  padding: 0.5rem 1.8rem;
-}
-.cid-srTDszp7RK .navbar .navbar-logo img {
-  width: auto;
-}
-.cid-srTDszp7RK .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-srTDszp7RK .navbar.collapsed {
-  justify-content: center;
-}
-.cid-srTDszp7RK .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-srTDszp7RK .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-@media (min-width: 992px) {
-  .cid-srTDszp7RK .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3rem);
-  }
-}
-.cid-srTDszp7RK .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-srTDszp7RK .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-srTDszp7RK .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 41%;
-}
-.cid-srTDszp7RK .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-srTDszp7RK .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: 0.25rem 1.5rem;
-  text-align: center;
-}
-.cid-srTDszp7RK .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-@media (max-width: 991px) {
-  .cid-srTDszp7RK .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-srTDszp7RK .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-srTDszp7RK .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-srTDszp7RK .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-srTDszp7RK .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 40%;
-  }
-  .cid-srTDszp7RK .navbar .navbar-logo img {
-    height: 3rem !important;
-  }
-  .cid-srTDszp7RK .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-srTDszp7RK .navbar .dropdown-menu .dropdown-item {
-    padding: 0.25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-srTDszp7RK .navbar .navbar-brand {
-    flex-shrink: initial;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-srTDszp7RK .navbar .navbar-toggler {
-    flex-basis: auto;
-  }
-  .cid-srTDszp7RK .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-}
-.cid-srTDszp7RK .navbar.navbar-short {
-  min-height: 60px;
-}
-.cid-srTDszp7RK .navbar.navbar-short .navbar-logo img {
-  height: 2.5rem !important;
-}
-.cid-srTDszp7RK .navbar.navbar-short .navbar-brand {
-  min-height: 60px;
-  padding: 0;
-}
-.cid-srTDszp7RK .navbar-brand {
-  min-height: 70px;
-  flex-shrink: 0;
-  align-items: center;
-  margin-right: 0;
-  padding: 10px 0;
-  transition: all 0.3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-srTDszp7RK .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-srTDszp7RK .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-srTDszp7RK .dropdown-item.active,
-.cid-srTDszp7RK .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-srTDszp7RK .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-srTDszp7RK .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-srTDszp7RK .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-srTDszp7RK .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
-}
-.cid-srTDszp7RK .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-srTDszp7RK .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-srTDszp7RK ul.navbar-nav {
-  flex-wrap: wrap;
-}
-.cid-srTDszp7RK .navbar-buttons {
-  text-align: center;
-  min-width: 170px;
-}
-.cid-srTDszp7RK button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all 0.2s;
-  position: relative;
-  align-self: center;
-}
-.cid-srTDszp7RK button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #000000;
-}
-.cid-srTDszp7RK button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all 0.2s;
-}
-.cid-srTDszp7RK button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-srTDszp7RK button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-srTDszp7RK button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all 0.2s;
-}
-.cid-srTDszp7RK nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-srTDszp7RK nav.opened .hamburger span:nth-child(2) {
-  transform: rotate(45deg);
-  transition: all 0.25s;
-}
-.cid-srTDszp7RK nav.opened .hamburger span:nth-child(3) {
-  transform: rotate(-45deg);
-  transition: all 0.25s;
-}
-.cid-srTDszp7RK nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-srTDszp7RK .navbar-dropdown {
-  padding: 0 1rem;
-  position: fixed;
-}
-.cid-srTDszp7RK a.nav-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cid-srTDszp7RK .icons-menu {
-  flex-wrap: nowrap;
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-srTDszp7RK .navbar {
-    height: 70px;
-  }
-  .cid-srTDszp7RK .navbar.opened {
-    height: auto;
-  }
-  .cid-srTDszp7RK .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
-}
-.cid-srToHXa5TG {
+.cid-srTHcnWldw {
   background-image: url("../../../assets/images/background8.jpg");
 }
-.cid-srToHXa5TG .icons-media-container {
+.cid-srTHcnWldw .icons-media-container {
   display: flex;
   -webkit-justify-content: center;
   justify-content: center;
@@ -1119,20 +805,20 @@ a {
   flex-wrap: wrap;
   padding-top: 4rem;
 }
-.cid-srToHXa5TG .icons-media-container .mbr-iconfont {
+.cid-srTHcnWldw .icons-media-container .mbr-iconfont {
   font-size: 96px;
   color: #ffffff;
 }
-.cid-srToHXa5TG .icons-media-container .icon-block {
+.cid-srTHcnWldw .icons-media-container .icon-block {
   padding-bottom: 1rem;
 }
-.cid-srToHXa5TG .mbr-text {
+.cid-srTHcnWldw .mbr-text {
   color: #ffffff;
 }
-.cid-srToHXa5TG .card {
+.cid-srTHcnWldw .card {
   padding-bottom: 1.5rem;
 }
-.cid-srToHXa5TG .card-wrapper {
+.cid-srTHcnWldw .card-wrapper {
   min-height: 220px;
   transition: all 0.3s;
   border-radius: 4px;
@@ -1141,115 +827,115 @@ a {
   justify-content: center;
   align-items: center;
 }
-.cid-srToHXa5TG .card-wrapper .mbr-iconfont {
+.cid-srTHcnWldw .card-wrapper .mbr-iconfont {
   display: block;
   font-size: 4rem;
   color: #ffffff;
   margin-bottom: 2rem;
 }
-.cid-srToHXa5TG .card-wrapper .card-title {
+.cid-srTHcnWldw .card-wrapper .card-title {
   color: #ffffff;
 }
-.cid-srTlDyK3nF {
+.cid-srTHcoCPCM {
   background-image: url("../../../assets/images/background9.jpg");
 }
-.cid-s48MCQYojq {
+.cid-srTHcoYQSC {
   background-image: url("../../../assets/images/background7.jpg");
 }
-.cid-s48MCQYojq .mbr-section-title {
+.cid-srTHcoYQSC .mbr-section-title {
   text-align: center;
 }
-.cid-s48MCQYojq .mbr-text,
-.cid-s48MCQYojq .mbr-section-btn {
+.cid-srTHcoYQSC .mbr-text,
+.cid-srTHcoYQSC .mbr-section-btn {
   color: #232323;
   text-align: center;
 }
 @media (max-width: 991px) {
-  .cid-s48MCQYojq .mbr-section-title,
-  .cid-s48MCQYojq .mbr-section-btn,
-  .cid-s48MCQYojq .mbr-text {
+  .cid-srTHcoYQSC .mbr-section-title,
+  .cid-srTHcoYQSC .mbr-section-btn,
+  .cid-srTHcoYQSC .mbr-text {
     text-align: center;
   }
 }
-.cid-s48udlf8KU {
+.cid-srTHcpkg5D {
   padding-top: 5rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-s48udlf8KU .mbr-section-title {
+.cid-srTHcpkg5D .mbr-section-title {
   text-align: left;
 }
-.cid-s48udlf8KU .mbr-section-subtitle {
+.cid-srTHcpkg5D .mbr-section-subtitle {
   text-align: left;
 }
-.cid-s48upRUlSD {
+.cid-srTHcpBp4M {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
 @media (max-width: 991px) {
-  .cid-s48upRUlSD .image-wrapper {
+  .cid-srTHcpBp4M .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-s48upRUlSD .row {
+.cid-srTHcpBp4M .row {
   flex-direction: row-reverse;
 }
-.cid-s48upRUlSD img {
+.cid-srTHcpBp4M img {
   width: 100%;
 }
-.cid-s48vaXqeL6 {
+.cid-srTHcpResv {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-s48vaXqeL6 .mbr-section-title {
+.cid-srTHcpResv .mbr-section-title {
   text-align: left;
 }
-.cid-s48vaXqeL6 .mbr-section-subtitle {
+.cid-srTHcpResv .mbr-section-subtitle {
   text-align: left;
 }
-.cid-s48vnjULo4 {
+.cid-srTHcq6aI9 {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-s48vnjULo4 .mbr-section-title {
+.cid-srTHcq6aI9 .mbr-section-title {
   text-align: left;
 }
-.cid-s48vnjULo4 .mbr-section-subtitle {
+.cid-srTHcq6aI9 .mbr-section-subtitle {
   text-align: left;
 }
-.cid-s48vrXhP0J {
+.cid-srTHcqmUeU {
   padding-top: 2rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-s48vrXhP0J .mbr-section-title {
+.cid-srTHcqmUeU .mbr-section-title {
   text-align: left;
 }
-.cid-s48vrXhP0J .mbr-section-subtitle {
+.cid-srTHcqmUeU .mbr-section-subtitle {
   text-align: left;
 }
-.cid-s48P1Icc8J {
+.cid-srTHcqPrpW {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #232323;
 }
-.cid-s48P1Icc8J .row-links {
+.cid-srTHcqPrpW .row-links {
   width: 100%;
   justify-content: center;
 }
-.cid-s48P1Icc8J .social-row {
+.cid-srTHcqPrpW .social-row {
   width: 100%;
   justify-content: center;
 }
-.cid-s48P1Icc8J .media-container-row {
+.cid-srTHcqPrpW .media-container-row {
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.cid-s48P1Icc8J .media-container-row .foot-menu {
+.cid-srTHcqPrpW .media-container-row .foot-menu {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -1257,13 +943,13 @@ a {
   padding: 0;
   margin-bottom: 0;
 }
-.cid-s48P1Icc8J .media-container-row .foot-menu li {
+.cid-srTHcqPrpW .media-container-row .foot-menu li {
   padding: 0 1rem 1rem 1rem;
 }
-.cid-s48P1Icc8J .media-container-row .foot-menu li p {
+.cid-srTHcqPrpW .media-container-row .foot-menu li p {
   margin: 0;
 }
-.cid-s48P1Icc8J .media-container-row .social-list {
+.cid-srTHcqPrpW .media-container-row .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1271,31 +957,31 @@ a {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
-.cid-s48P1Icc8J .media-container-row .social-list .mbr-iconfont-social {
+.cid-srTHcqPrpW .media-container-row .social-list .mbr-iconfont-social {
   font-size: 1.5rem;
   color: #ffffff;
 }
-.cid-s48P1Icc8J .media-container-row .social-list .soc-item {
+.cid-srTHcqPrpW .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s48P1Icc8J .media-container-row .social-list a {
+.cid-srTHcqPrpW .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   transition: .2s linear;
 }
-.cid-s48P1Icc8J .media-container-row .social-list a:hover {
+.cid-srTHcqPrpW .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s48P1Icc8J .media-container-row .social-list {
+  .cid-srTHcqPrpW .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-s48P1Icc8J .media-container-row .row-copirayt {
+.cid-srTHcqPrpW .media-container-row .row-copirayt {
   word-break: break-word;
   width: 100%;
 }
-.cid-s48P1Icc8J .media-container-row .row-copirayt p {
+.cid-srTHcqPrpW .media-container-row .row-copirayt p {
   width: 100%;
 }
